Fix link to anniversary keeper in index.html

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <a href="https://apps.apple.com" target="_blank" rel="noopener noreferrer">
               View on the App Store
             </a>
-            <a href="/anniversarykeeper/">
+            <a href="/anniversary-keeper/">
               App details &amp; privacy policy
             </a>
           </div>
