--- a/anniversary-keeper.html
+++ b/anniversary-keeper.html
@@ -94,6 +94,8 @@
             <p>
                 If you have any questions, issues, or requests about Anniversary Keeper,
                 please contact the developer via the form below:
+                Email: omoch_soft-dev@yahoo.co.jp
+
             </p>
             <p>
                 <a href="https://forms.gle/DFj9JgmkqGduD6ZN9" target="_blank" rel="noopener noreferrer">
