--- a/anniversary-keeper.html
+++ b/anniversary-keeper.html
@@ -93,8 +93,8 @@
             <h2>Contact</h2>
             <p>
                 If you have any questions, issues, or requests about Anniversary Keeper,
-                please contact the developer via the form below:
-                Email: omoch_soft-dev@yahoo.co.jp
+                please contact the developer via the form below:<br>
+                Email: omochi_soft-dev@yahoo.co.jp
 
             </p>
             <p>
