--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <a href="https://apps.apple.com" target="_blank" rel="noopener noreferrer">
               View on the App Store
             </a>
-            <a href="/anniversary-keeper.html/">
+            <a href="https://omochisoft.github.io/anniversary-keeper.html">
               App details &amp; privacy policy
             </a>
           </div>
