--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
           <div class="app-links">
             <!-- App Store URL はあとで差し替え -->
-            <a href="https://apps.apple.com" target="_blank" rel="noopener noreferrer">
+            <a href="https://apps.apple.com/app/anniversary-keeper/id6755642205" target="_blank" rel="noopener noreferrer">
               View on the App Store
             </a>
             <a href="https://omochisoft.github.io/anniversary-keeper.html">
