Update link text for contact and privacy policy

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               View on the App Store
             </a>
             <a href="https://omochisoft.github.io/anniversary-keeper.html">
-              App details &amp; privacy policy
+              Contact / Support &amp; privacy policy
             </a>
           </div>
         </div>
