--- a/anniversary-keeper.html
+++ b/anniversary-keeper.html
@@ -90,7 +90,7 @@
 
         <!-- Contact -->
         <section class="card">
-            <h2>Contact</h2>
+            <h2>Contact / Support</h2>
             <p>
                 If you have any questions, issues, or requests about Anniversary Keeper,
                 please contact the developer via the form below:<br>
