--- a/test.html
+++ b/test.html
@@ -4,82 +4,77 @@
   <meta charset="UTF-8" />
   <title>Omochi Soft – Apps</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <style>
     :root {
-      --bg-pink: #ffe7ed;
-      --card-bg: #fff9fb;
-      --text-main: #333333;
-      --text-muted: #666666;
+      --bg-main: #fcf9f7;     /* 白寄りアイボリー。非常に軽い */
+      --bg-header: #ffeef2;   /* 薄い白ピンク */
+      --card-bg: #ffffff;
+      --text-main: #333;
+      --text-muted: #666;
       --accent: #e18ca5;
       --accent-dark: #c86a87;
-      --border-soft: rgba(0,0,0,0.04);
-      --shadow-soft: 0 10px 30px rgba(0,0,0,0.06);
+      --border-soft: rgba(0,0,0,0.05);
+      --shadow-soft: 0 6px 20px rgba(0,0,0,0.04);
       --radius-card: 18px;
     }
 
-    * {
-      box-sizing: border-box;
-    }
-
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: var(--bg-pink);
+      font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, sans-serif;
+      background: var(--bg-main);
       color: var(--text-main);
-      line-height: 1.5;
+      line-height: 1.55;
     }
 
-    /* ====== HEADER ====== */
+    /* ===== HEADER ===== */
     header {
-      background: #ffd8e1;
+      background: var(--bg-header);
       border-bottom: 1px solid var(--border-soft);
     }
 
     .header-inner {
-      max-width: 1100px;
+      max-width: 1200px;
       margin: 0 auto;
-      padding: 12px 16px 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      gap: 10px;
+      padding: 0;
     }
 
     .header-hero {
       width: 100%;
-      max-width: 980px;
-      border-radius: 20px;
+      height: auto;
       display: block;
+      object-fit: cover;
     }
 
     .header-caption {
+      text-align: center;
+      padding: 12px 6px 20px;
       font-size: 0.9rem;
       color: var(--text-muted);
     }
 
-    /* ====== MAIN LAYOUT ====== */
+    /* ===== MAIN AREA ===== */
     main {
       max-width: 900px;
       margin: 0 auto;
-      padding: 26px 16px 40px;
+      padding: 32px 16px 48px;
     }
 
     .section-title {
       font-size: 1.1rem;
       letter-spacing: 0.05em;
-      text-transform: uppercase;
       color: var(--accent-dark);
       margin-bottom: 14px;
+      text-transform: uppercase;
     }
 
-    /* ====== APP CARD ====== */
+    /* ===== APP CARD ===== */
     .app-card {
       background: var(--card-bg);
       border-radius: var(--radius-card);
-      padding: 18px 18px;
-      margin-bottom: 18px;
+      padding: 20px 20px;
+      margin-bottom: 20px;
       box-shadow: var(--shadow-soft);
       display: flex;
       gap: 16px;
@@ -89,11 +84,10 @@
     .app-icon-wrapper {
       width: 64px;
       height: 64px;
-      flex-shrink: 0;
-      border-radius: 20px;
-      overflow: hidden;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+      border-radius: 18px;
       background: #f5d3db;
+      overflow: hidden;
+      flex-shrink: 0;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -103,12 +97,6 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      display: block;
-    }
-
-    .app-info h2 {
-      margin: 0 0 4px 0;
-      font-size: 1.05rem;
     }
 
     .app-badge {
@@ -120,17 +108,22 @@
       background: #ffeef4;
       border-radius: 999px;
       padding: 2px 10px;
-      margin-bottom: 4px;
+      margin-bottom: 6px;
+    }
+
+    .app-info h2 {
+      margin: 0 0 4px 0;
+      font-size: 1.05rem;
     }
 
     .app-info p {
-      margin: 3px 0;
+      margin: 4px 0;
       font-size: 0.9rem;
       color: var(--text-muted);
     }
 
     .app-links {
-      margin-top: 8px;
+      margin-top: 10px;
       font-size: 0.86rem;
     }
 
@@ -138,20 +131,20 @@
       color: var(--accent);
       text-decoration: none;
       margin-right: 14px;
-      padding-bottom: 1px;
       border-bottom: 1px solid transparent;
+      padding-bottom: 1px;
     }
 
     .app-links a:hover {
       border-bottom-color: var(--accent);
     }
 
-    /* ====== FOOTER ====== */
+    /* ===== FOOTER ===== */
     footer {
       text-align: center;
       font-size: 0.78rem;
       color: #8a7c80;
-      padding: 18px 12px 24px;
+      padding: 22px 12px;
       border-top: 1px solid var(--border-soft);
     }
 
@@ -160,25 +153,20 @@
       text-decoration: none;
     }
 
-    /* ====== RESPONSIVE ====== */
-    @media (max-width: 600px) {
-      .app-card {
-        flex-direction: row;
-      }
-    }
   </style>
 </head>
+
 <body>
+
   <header>
     <div class="header-inner">
-      <!-- ここをヘッダー画像に差し替え -->
       <img
         src="omochisoft-header.jpg"
-        alt="Omochi Soft – Soft Technology for Your Day"
+        alt="Omochi Soft Header"
         class="header-hero"
       />
       <div class="header-caption">
-        Soft Technology for Your Day – Your day, a little softer.
+        Soft Technology for Your Day — Your Day, a little softer.
       </div>
     </div>
   </header>
@@ -187,21 +175,21 @@
     <section>
       <h2 class="section-title">Apps</h2>
 
-      <!-- Anniversary Keeper カード -->
+      <!-- Anniversary Keeper -->
       <article class="app-card">
         <div class="app-icon-wrapper">
-          <!-- AKアイコン画像に差し替え -->
           <img src="anniversary-keeper-icon.png" alt="Anniversary Keeper icon" />
         </div>
 
         <div class="app-info">
           <div class="app-badge">iOS • Free</div>
+
           <h2>Anniversary Keeper</h2>
-          <p>A dedicated calendar app for managing birthdays and anniversaries.</p>
-          <p>Keep important dates in one place and get gentle reminders at the right time.</p>
+          <p>A simple and dedicated calendar for birthdays and anniversaries.</p>
+          <p>Keep important dates organized and receive gentle reminders.</p>
 
           <div class="app-links">
-            <a href="https://apps.apple.com/app/anniversary-keeper/id6755642205" target="_blank" rel="noopener noreferrer">
+            <a href="https://apps.apple.com/app/anniversary-keeper/id6755642205" target="_blank">
               View on the App Store
             </a>
             <a href="https://omochisoft.github.io/anniversary-keeper.html">
@@ -211,12 +199,13 @@
         </div>
       </article>
 
-      <!-- 将来のアプリも、この下に card をコピペして増やせる -->
     </section>
   </main>
 
   <footer>
     &copy; 2025 Omochi Soft. All rights reserved.
   </footer>
+
 </body>
 </html>
+
