Refactor header section in test.html
Updated header section with new HTML structure and removed old styles.

--- a/test.html
+++ b/test.html
@@ -29,16 +29,16 @@
     }
 
     /* ===== HEADER ===== */
-    header {
-      background: var(--bg-header);
-      border-bottom: 1px solid var(--border-soft);
-    }
+<header>
+  <div class="header-inner">
+    <img
+      src="omochisoft-header.jpg"
+      alt="Omochi Soft Header"
+      class="header-hero"
+    />
+  </div>
+</header>
 
-    .header-inner {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0;
-    }
 
     .header-hero {
       width: 100%;
@@ -47,12 +47,7 @@
       object-fit: cover;
     }
 
-    .header-caption {
-      text-align: center;
-      padding: 12px 6px 20px;
-      font-size: 0.9rem;
-      color: var(--text-muted);
-    }
+
 
     /* ===== MAIN AREA ===== */
     main {
