--- a/test.html
+++ b/test.html
@@ -7,8 +7,8 @@
 
   <style>
     :root {
-      --bg-main: #fcf9f7;     /* 白寄りアイボリー。非常に軽い */
-      --bg-header: #ffeef2;   /* 薄い白ピンク */
+      --bg-main: #fcf9f7;
+      --bg-header: #ffeef2;
       --card-bg: #ffffff;
       --text-main: #333;
       --text-muted: #666;
@@ -29,16 +29,16 @@
     }
 
     /* ===== HEADER ===== */
-<header>
-  <div class="header-inner">
-    <img
-      src="omochisoft-header.jpg"
-      alt="Omochi Soft Header"
-      class="header-hero"
-    />
-  </div>
-</header>
+    header {
+      background: var(--bg-header);
+      border-bottom: 1px solid var(--border-soft);
+    }
 
+    .header-inner {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0;
+    }
 
     .header-hero {
       width: 100%;
@@ -46,8 +46,6 @@
       display: block;
       object-fit: cover;
     }
-
-
 
     /* ===== MAIN AREA ===== */
     main {
@@ -163,42 +161,38 @@
   </div>
 </header>
 
+<main>
+  <section>
+    <h2 class="section-title">Apps</h2>
 
-  <main>
-    <section>
-      <h2 class="section-title">Apps</h2>
+    <article class="app-card">
+      <div class="app-icon-wrapper">
+        <img src="anniversary-keeper-icon.png" alt="Anniversary Keeper icon" />
+      </div>
 
-      <!-- Anniversary Keeper -->
-      <article class="app-card">
-        <div class="app-icon-wrapper">
-          <img src="anniversary-keeper-icon.png" alt="Anniversary Keeper icon" />
+      <div class="app-info">
+        <div class="app-badge">iOS • Free</div>
+        <h2>Anniversary Keeper</h2>
+        <p>A simple and dedicated calendar for birthdays and anniversaries.</p>
+        <p>Keep important dates organized and receive gentle reminders.</p>
+
+        <div class="app-links">
+          <a href="https://apps.apple.com/app/anniversary-keeper/id6755642205" target="_blank">
+            View on the App Store
+          </a>
+          <a href="https://omochisoft.github.io/anniversary-keeper.html">
+            Contact / Support &amp; Privacy Policy
+          </a>
         </div>
+      </div>
+    </article>
 
-        <div class="app-info">
-          <div class="app-badge">iOS • Free</div>
+  </section>
+</main>
 
-          <h2>Anniversary Keeper</h2>
-          <p>A simple and dedicated calendar for birthdays and anniversaries.</p>
-          <p>Keep important dates organized and receive gentle reminders.</p>
-
-          <div class="app-links">
-            <a href="https://apps.apple.com/app/anniversary-keeper/id6755642205" target="_blank">
-              View on the App Store
-            </a>
-            <a href="https://omochisoft.github.io/anniversary-keeper.html">
-              Contact / Support &amp; Privacy Policy
-            </a>
-          </div>
-        </div>
-      </article>
-
-    </section>
-  </main>
-
-  <footer>
-    &copy; 2025 Omochi Soft. All rights reserved.
-  </footer>
+<footer>
+  &copy; 2025 Omochi Soft. All rights reserved.
+</footer>
 
 </body>
 </html>
-
