Update header background color
Changed header background color to use --bg-main.

--- a/test.html
+++ b/test.html
@@ -29,10 +29,11 @@
     }
 
     /* ===== HEADER ===== */
-    header {
-      background: var(--bg-header);
-      border-bottom: 1px solid var(--border-soft);
-    }
+header {
+  background: var(--bg-main);  /* ここを変更 */
+  border-bottom: 1px solid var(--border-soft);
+}
+
 
     .header-inner {
       max-width: 1200px;
