Update header image source in test.html

--- a/test.html
+++ b/test.html
@@ -155,7 +155,7 @@ header {
 <header>
   <div class="header-inner">
     <img
-      src="omochisoft-header.jpg"
+      src="omochisoft-header2.jpg"
       alt="Omochi Soft Header"
       class="header-hero"
     />
