--- a/test.html
+++ b/test.html
@@ -30,9 +30,10 @@
 
     /* ===== HEADER ===== */
 header {
-  background: var(--bg-main);  /* ここを変更 */
-  border-bottom: 1px solid var(--border-soft);
+  background: var(--bg-header);
+  border-bottom: 0;
 }
+
 
 
     .header-inner {
