--- a/test.html
+++ b/test.html
@@ -31,8 +31,9 @@
     /* ===== HEADER ===== */
 header {
   background: var(--bg-header);
-  border-bottom: 0;
+  border-bottom: 1px solid var(--border-soft);  /* これが薄い線 */
 }
+
 
 
 
