Update link to Contact / Support & Privacy Policy

--- a/test.html
+++ b/test.html
@@ -183,9 +183,10 @@ header {
           <a href="https://apps.apple.com/app/anniversary-keeper/id6755642205" target="_blank">
             View on the App Store
           </a>
-          <a href="https://omochisoft.github.io/anniversary-keeper.html">
-            Contact / Support &amp; Privacy Policy
-          </a>
+<a href="https://omochisoft.github.io/anniversary-keeper.html" target="_blank">
+  Contact / Support &amp; Privacy Policy
+</a>
+
         </div>
       </div>
     </article>
