--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     :root {
       --bg-main: #fcf9f7;
-      --bg-header: #ffeef2;  /* もう使わなくなるが残しておいてもOK */
+      --bg-header: #ffeef2;
       --card-bg: #ffffff;
       --text-main: #333;
       --text-muted: #666;
@@ -28,10 +28,9 @@
       line-height: 1.55;
     }
 
-    /* ===== HEADER ===== */
     header {
-      background: var(--bg-main);  /* メイン背景と同じにする */
-      border-bottom: 0;            /* 下の線を消す */
+      background: var(--bg-main);
+      border-bottom: 0;
     }
 
     .header-inner {
@@ -47,7 +46,6 @@
       object-fit: cover;
     }
 
-    /* ===== MAIN AREA ===== */
     main {
       max-width: 900px;
       margin: 0 auto;
@@ -62,7 +60,6 @@
       text-transform: uppercase;
     }
 
-    /* ===== APP CARD ===== */
     .app-card {
       background: var(--card-bg);
       border-radius: var(--radius-card);
@@ -132,7 +129,6 @@
       border-bottom-color: var(--accent);
     }
 
-    /* ===== FOOTER ===== */
     footer {
       text-align: center;
       font-size: 0.78rem;
@@ -145,7 +141,6 @@
       color: var(--accent);
       text-decoration: none;
     }
-
   </style>
 </head>
 
@@ -165,6 +160,7 @@
   <section>
     <h2 class="section-title">Apps</h2>
 
+    <!-- Anniversary Keeper -->
     <article class="app-card">
       <div class="app-icon-wrapper">
         <img src="anniversary-keeper-icon.png" alt="Anniversary Keeper icon" />
@@ -187,9 +183,35 @@
       </div>
     </article>
 
+    <!-- Gift Note – Present Tracker -->
+    <article class="app-card">
+      <div class="app-icon-wrapper">
+        <img src="giftnote-icon.png" alt="Gift Note icon" />
+      </div>
+
+      <div class="app-info">
+        <div class="app-badge">iOS • Free</div>
+        <h2>Gift Note – Present Tracker</h2>
+        <p>A clean and simple app for recording the gifts you’ve received and given.</p>
+        <p>Track items, amounts, shops, notes, photos, and organize everything beautifully.</p>
+
+        <div class="app-links">
+          <a href="https://apps.apple.com/app/gift-note-present-tracker/XXXXXXXXX" target="_blank">
+            View on the App Store
+          </a>
+          <a href="https://omochisoft.github.io/giftnote.html" target="_blank">
+            Contact / Support &amp; Privacy Policy
+          </a>
+        </div>
+      </div>
+    </article>
+
   </section>
 </main>
 
 <footer>
   &copy; 2025 Omochi Soft. All rights reserved.
 </footer>
+
+</body>
+</html>
