--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <!-- Gift Note – Present Tracker -->
     <article class="app-card">
       <div class="app-icon-wrapper">
-        <img src="giftnote-icon.png" alt="Gift Note icon" />
+        <img src="giftnote_icon.png" alt="Gift Note icon" />
       </div>
 
       <div class="app-info">
