--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <style>
     :root {
       --bg-main: #fcf9f7;
-      --bg-header: #ffeef2;
       --card-bg: #ffffff;
       --text-main: #333;
       --text-muted: #666;
@@ -75,7 +74,7 @@
       width: 64px;
       height: 64px;
       border-radius: 18px;
-      background: #f5d3db;
+      background: #e3fee0;
       overflow: hidden;
       flex-shrink: 0;
       display: flex;
@@ -132,14 +131,9 @@
     footer {
       text-align: center;
       font-size: 0.78rem;
-      color: #8a7c80;
+      color: var(--text-muted);
       padding: 22px 12px;
       border-top: 1px solid var(--border-soft);
-    }
-
-    footer a {
-      color: var(--accent);
-      text-decoration: none;
     }
   </style>
 </head>
@@ -162,14 +156,14 @@
 
     <!-- Anniversary Keeper -->
     <article class="app-card">
-      <div class="app-icon-wrapper">
+      <div class="app-icon-wrapper" style="background:#f5d3db;">
         <img src="anniversary-keeper-icon.png" alt="Anniversary Keeper icon" />
       </div>
 
       <div class="app-info">
         <div class="app-badge">iOS • Free</div>
         <h2>Anniversary Keeper</h2>
-        <p>A simple and dedicated calendar for birthdays and anniversaries.</p>
+        <p>A charming and focused calendar for birthdays and anniversaries.</p>
         <p>Keep important dates organized and receive gentle reminders.</p>
 
         <div class="app-links">
@@ -183,23 +177,46 @@
       </div>
     </article>
 
-    <!-- Gift Note – Present Tracker -->
+    <!-- Gift Note -->
     <article class="app-card">
-      <div class="app-icon-wrapper">
+      <div class="app-icon-wrapper" style="background:#ffeef4;">
         <img src="giftnote_icon.png" alt="Gift Note icon" />
       </div>
 
       <div class="app-info">
         <div class="app-badge">iOS • Free</div>
         <h2>Gift Note – Present Tracker</h2>
-        <p>A clean and simple app for recording the gifts you’ve received and given.</p>
-        <p>Track items, amounts, shops, notes, photos, and organize everything beautifully.</p>
+        <p>Easily record gifts you've received and given, and recall them anytime.</p>
+        <p>Keep your relationships thoughtful and organized.</p>
 
         <div class="app-links">
           <a href="https://apps.apple.com/jp/app/gift-note/id6755926102" target="_blank">
             View on the App Store
           </a>
           <a href="https://omochisoft.github.io/giftnote.html" target="_blank">
+            Contact / Support &amp; Privacy Policy
+          </a>
+        </div>
+      </div>
+    </article>
+
+    <!-- 🔹 Smart Savings Tracker (NEW) -->
+    <article class="app-card">
+      <div class="app-icon-wrapper" style="background:#e0f6e0;">
+        <img src="smartsavings_icon.png" alt="Smart Savings Tracker icon" />
+      </div>
+
+      <div class="app-info">
+        <div class="app-badge">iOS • Free</div>
+        <h2>Smart Savings Tracker</h2>
+        <p>Record money you saved by not spending it — effortlessly.</p>
+        <p>Stay motivated and reach your savings goals faster.</p>
+
+        <div class="app-links">
+          <a href="#" target="_blank">
+            View on the App Store
+          </a>
+          <a href="https://omochisoft.github.io/smart-savings-privacy.html" target="_blank">
             Contact / Support &amp; Privacy Policy
           </a>
         </div>
