--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           <a href="#" target="_blank">
             View on the App Store
           </a>
-          <a href="https://omochisoft.github.io/smart-savings-privacy.html" target="_blank">
+          <a href="https://omochisoft.github.io/savings_tracker.html" target="_blank">
             Contact / Support &amp; Privacy Policy
           </a>
         </div>
