Update title from 'Kantan Smart' to 'Smart Savings Tracker'

--- a/savings_tracker.html
+++ b/savings_tracker.html
@@ -80,7 +80,7 @@
     <main>
         <!-- App short description -->
         <section class="card">
-            <h2>About Kantan Smart – Savings Log</h2>
+            <h2>About Smart Savings Tracker</h2>
             <p>
                 Smart Savings Tracker is a simple app for recording money you
                 <strong>saved by not spending it</strong> — for example, “decided not to buy” or
