--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
         <p>Keep important dates organized and receive gentle reminders.</p>
 
         <div class="app-links">
-          <a href="https://apps.apple.com/app/anniversary-keeper/id6755642205" target="_blank">
+          <a href="https://apps.apple.com/app/anniversary-keeper/id6755642205" target="_blank" rel="noopener noreferrer">
             View on the App Store
           </a>
-          <a href="https://omochisoft.github.io/anniversary-keeper.html" target="_blank">
+          <a href="https://omochisoft.github.io/anniversary-keeper.html" target="_blank" rel="noopener noreferrer">
             Contact / Support &amp; Privacy Policy
           </a>
         </div>
@@ -190,17 +190,17 @@
         <p>Keep your relationships thoughtful and organized.</p>
 
         <div class="app-links">
-          <a href="https://apps.apple.com/jp/app/gift-note/id6755926102" target="_blank">
+          <a href="https://apps.apple.com/jp/app/gift-note/id6755926102" target="_blank" rel="noopener noreferrer">
             View on the App Store
           </a>
-          <a href="https://omochisoft.github.io/giftnote.html" target="_blank">
+          <a href="https://omochisoft.github.io/giftnote.html" target="_blank" rel="noopener noreferrer">
             Contact / Support &amp; Privacy Policy
           </a>
         </div>
       </div>
     </article>
 
-    <!-- 🔹 Smart Savings Tracker (NEW) -->
+    <!-- Smart Savings Tracker -->
     <article class="app-card">
       <div class="app-icon-wrapper" style="background:#e0f6e0;">
         <img src="smartsavings_icon.png" alt="Smart Savings Tracker icon" />
@@ -213,10 +213,36 @@
         <p>Stay motivated and reach your savings goals faster.</p>
 
         <div class="app-links">
-          <a href="#" target="_blank">
+          <a href="https://apps.apple.com/app/smart-savings-tracker/id6756996526" target="_blank" rel="noopener noreferrer">
             View on the App Store
           </a>
-          <a href="https://omochisoft.github.io/savings_tracker.html" target="_blank">
+          <a href="https://omochisoft.github.io/savings_tracker.html" target="_blank" rel="noopener noreferrer">
+            Contact / Support &amp; Privacy Policy
+          </a>
+        </div>
+      </div>
+    </article>
+
+    <!-- Fridge Inventory: Grocery Cost (NEW) -->
+    <article class="app-card">
+      <div class="app-icon-wrapper" style="background:#e6f2ff;">
+        <!-- TODO: Replace with your actual icon file name -->
+        <img src="fridge.png" alt="Fridge Inventory: Grocery Cost icon" />
+      </div>
+
+      <div class="app-info">
+        <div class="app-badge">iOS • Free</div>
+        <h2>Fridge Inventory: Grocery Cost</h2>
+        <p>Log groceries and visualize what’s in your fridge — anytime, anywhere.</p>
+        <p>Automatic inventory updates and ingredient cost tracking for each meal.</p>
+
+        <div class="app-links">
+          <!-- TODO: Replace # with the actual App Store URL when ready -->
+          <a href="#" target="_blank" rel="noopener noreferrer">
+            View on the App Store
+          </a>
+          <!-- TODO: Replace with the actual privacy/support page filename if different -->
+          <a href="https://omochisoft.github.io/fridge.html" target="_blank" rel="noopener noreferrer">
             Contact / Support &amp; Privacy Policy
           </a>
         </div>
@@ -227,8 +253,9 @@
 </main>
 
 <footer>
-  &copy; 2025 Omochi Soft. All rights reserved.
+  &copy; 2026 Omochi Soft. All rights reserved.
 </footer>
 
 </body>
 </html>
+
