--- a/fridge.html
+++ b/fridge.html
@@ -125,7 +125,7 @@
     <section class="lang card" data-lang="en">
       <h2>About <span class="appname">Fridge Inventory: Grocery Cost</span></h2>
       <p>
-        <span class="appname">Fridge Inventory: Grocery Cost</span> is a simple app that helps you
+        <span class="appname">Fridge Inventory: Grocery Cost</span> is app that helps you
         <strong>log groceries</strong> and <strong>visualize what’s in your fridge</strong>.
         You can record items with details such as ingredients, quantity, price, purchase date,
         and store, then review your fridge inventory and shopping history anytime.
@@ -274,7 +274,7 @@
     <section class="lang card hidden" data-lang="ja">
       <h2><span class="appname">見える化　冷蔵庫の在庫管理と食材費</span>について</h2>
       <p>
-        <span class="appname">見える化　冷蔵庫の在庫管理と食材費</span>は、食材の記録と冷蔵庫の在庫を「見える化」するためのシンプルなアプリです。
+        <span class="appname">見える化　冷蔵庫の在庫管理と食材費</span>は、食材の記録と冷蔵庫の在庫を「見える化」するためのアプリです。
         食材名・数量・価格・購入日・購入店などを登録し、在庫や買い物履歴をいつでも確認できます。
       </p>
       <p>
