--- a/fridge/terms.html
+++ b/fridge/terms.html
@@ -273,7 +273,7 @@
       <li><strong>購入手続・請求</strong><br>
         購入、請求、更新、解約、返金等は、AppleのApp Store（StoreKit）により処理されます。ユーザーはApp Storeの案内・規約に従うものとします。
       </li>
-      <li><strong>サブスクリプションの自動更新</strong>
+      <li><strong>サブスクリプションの自動更新(1ヶ月ごと)</strong>
         <ul>
           <li>ユーザーが解約しない限り、購読は自動更新されます。</li>
           <li>更新課金のタイミング等は、App Storeの仕様に従います。</li>
@@ -398,7 +398,7 @@
       <li>The Service may offer premium features (e.g., remove ads, edit categories, CSV export, iCloud saving).</li>
       <li>Premium access may be provided via auto-renewable subscriptions and/or a one-time (non-consumable) purchase, as shown in the App/App Store.</li>
       <li>Purchases, billing, renewals, cancellations, refunds, and restorations are handled by Apple’s App Store (StoreKit) under Apple’s terms.</li>
-      <li>Subscriptions auto-renew unless cancelled in your App Store subscription settings. Deleting the App does not cancel.</li>
+      <li>Subscriptions auto-renew every month unless cancelled in your App Store subscription settings. Deleting the app does not cancel the subscription.</li>
       <li>Users may hold both subscription and lifetime purchase; premium functionality is not duplicated.</li>
       <li>Refunds follow Apple’s refund policy.</li>
       <li>Minors must obtain guardian consent before purchasing.</li>
