Fix typo in app description in fridge.html

--- a/fridge.html
+++ b/fridge.html
@@ -125,7 +125,7 @@
     <section class="lang card" data-lang="en">
       <h2>About <span class="appname">Fridge Inventory: Grocery Cost</span></h2>
       <p>
-        <span class="appname">Fridge Inventory: Grocery Cost</span> is app that helps you
+        <span class="appname">Fridge Inventory: Grocery Cost</span> is an app that helps you
         <strong>log groceries</strong> and <strong>visualize what’s in your fridge</strong>.
         You can record items with details such as ingredients, quantity, price, purchase date,
         and store, then review your fridge inventory and shopping history anytime.
