--- a/index.html
+++ b/index.html
@@ -224,30 +224,30 @@
     </article>
 
     <!-- Fridge Inventory: Grocery Cost (NEW) -->
-    <article class="app-card">
-      <div class="app-icon-wrapper" style="background:#e6f2ff;">
-        <!-- TODO: Replace with your actual icon file name -->
-        <img src="fridge.png" alt="Fridge Inventory: Grocery Cost icon" />
-      </div>
+<article class="app-card">
+  <div class="app-icon-wrapper" style="background:#e6f2ff;">
+    <img src="fridge.png" alt="Fridge Inventory: Grocery Cost icon" />
+  </div>
 
-      <div class="app-info">
-        <div class="app-badge">iOS • Free</div>
-        <h2>Fridge Inventory: Grocery Cost</h2>
-        <p>Log groceries and visualize what’s in your fridge — anytime, anywhere.</p>
-        <p>Automatic inventory updates and ingredient cost tracking for each meal.</p>
+  <div class="app-info">
+    <div class="app-badge">iOS • Free</div>
+    <h2>Fridge Inventory: Grocery Cost</h2>
+    <p>Log groceries and visualize what’s in your fridge — anytime, anywhere.</p>
+    <p>Automatic inventory updates and ingredient cost tracking for each meal.</p>
 
-        <div class="app-links">
-          <!-- TODO: Replace # with the actual App Store URL when ready -->
-          <a href="#" target="_blank" rel="noopener noreferrer">
-            View on the App Store
-          </a>
-          <!-- TODO: Replace with the actual privacy/support page filename if different -->
-          <a href="https://omochisoft.github.io/fridge.html" target="_blank" rel="noopener noreferrer">
-            Contact / Support &amp; Privacy Policy
-          </a>
-        </div>
-      </div>
-    </article>
+    <div class="app-links">
+      <a href="#" target="_blank" rel="noopener noreferrer">
+        View on the App Store
+      </a>
+      <a href="https://omochisoft.github.io/fridge.html" target="_blank" rel="noopener noreferrer">
+        Contact / Support &amp; Privacy Policy
+      </a>
+      <a href="https://omochisoft.github.io/fridge/terms.html" target="_blank" rel="noopener noreferrer">
+        Terms of Use
+      </a>
+    </div>
+  </div>
+</article>
 
   </section>
 </main>
