--- a/breeze.html
+++ b/breeze.html
@@ -212,8 +212,8 @@
     <section class="lang card hidden" data-lang="ja">
       <h2><span class="appname">BreezeChat Air</span>について</h2>
       <p>
-        <span class="appname">BreezeChat Air</span>は、<strong>メッセージアプリ風（チャット風）</strong>の画面で、
-        感情や考えを<strong>ひとりで手放す</strong>ためのアプリです。
+        <span class="appname">BreezeChat Air</span>は、<strong>メッセージアプリ風（チャット風）の画面で、
+        感情や考えを発散する</strong>ためのアプリです。
       </p>
       <p class="muted">
         アカウント登録は不要です。開発者が運営する外部サーバーへ、入力したメッセージ内容を送信することはありません。
