--- a/breeze.html
+++ b/breeze.html
@@ -217,7 +217,7 @@
       </p>
       <p class="muted">
         アカウント登録は不要です。開発者が運営する外部サーバーへ、入力したメッセージ内容を送信することはありません。
-        （アプリの仕様により、内容は端末内に一時的に保持され、アプリを閉じると消える場合があります。）
+        （アプリの仕様により、内容は端末内に一時的に保持され、アプリを閉じると消えます。）
       </p>
 
       <h2>お問い合わせ / サポート</h2>
