--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       </div>
     </article>
 
-    <!-- Fridge Inventory: Grocery Cost (NEW) -->
+    <!-- Fridge Inventory: Grocery Cost -->
 <article class="app-card">
   <div class="app-icon-wrapper" style="background:#e6f2ff;">
     <img src="fridge.png" alt="Fridge Inventory: Grocery Cost icon" />
@@ -236,7 +236,7 @@
     <p>Automatic inventory updates and ingredient cost tracking for each meal.</p>
 
     <div class="app-links">
-      <a href="#" target="_blank" rel="noopener noreferrer">
+      <a href="https://apps.apple.com/app/fridge-inventory-grocery-cost/id6757185053" target="_blank" rel="noopener noreferrer">
         View on the App Store
       </a>
       <a href="https://omochisoft.github.io/fridge.html" target="_blank" rel="noopener noreferrer">
