--- a/index.html
+++ b/index.html
@@ -249,6 +249,29 @@
   </div>
 </article>
 
+<!-- BreezeChat Air - Free -->
+<article class="app-card">
+  <div class="app-icon-wrapper" style="background:#e6f4ff;">
+    <img src="breezefree-icon.png" alt="BreezeChat Air icon" />
+  </div>
+
+  <div class="app-info">
+    <div class="app-badge">iOS • Free</div>
+    <h2>BreezeChat Air – Free</h2>
+    <p>A private, chat-style space for releasing emotions.</p>
+    <p>Messages are never saved — close the app and everything disappears.</p>
+
+    <div class="app-links">
+      <a href="" target="_blank" rel="noopener noreferrer">
+        View on the App Store
+      </a>
+      <a href="https://omochisoft.github.io/breeze.html" target="_blank" rel="noopener noreferrer">
+        Contact / Support &amp; Privacy Policy
+      </a>
+    </div>
+  </div>
+</article>
+
   </section>
 </main>
 
