--- a/index.html
+++ b/index.html
@@ -252,12 +252,12 @@
 <!-- BreezeChat Air - Free -->
 <article class="app-card">
   <div class="app-icon-wrapper" style="background:#e6f4ff;">
-    <img src="breezefree-icon.png" alt="BreezeChat Air icon" />
+    <img src="breezefree-icon2.png" alt="BreezeChat Air icon" />
   </div>
 
   <div class="app-info">
     <div class="app-badge">iOS • Free</div>
-    <h2>BreezeChat Air – Free</h2>
+    <h2>BreezeChat Air</h2>
     <p>A private, chat-style space for releasing emotions.</p>
     <p>Messages are never saved — close the app and everything disappears.</p>
 
