--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
   <div class="app-info">
     <div class="app-badge">iOS • Free</div>
-    <h2>BreezeChat Air</h2>
+    <h2>BreezeChat Air - calm</h2>
     <p>A private, chat-style space for releasing emotions.</p>
     <p>Messages are never saved — close the app and everything disappears.</p>
 
