--- a/index.html
+++ b/index.html
@@ -224,53 +224,77 @@
     </article>
 
     <!-- Fridge Inventory: Grocery Cost -->
-<article class="app-card">
-  <div class="app-icon-wrapper" style="background:#e6f2ff;">
-    <img src="fridge.png" alt="Fridge Inventory: Grocery Cost icon" />
-  </div>
+    <article class="app-card">
+      <div class="app-icon-wrapper" style="background:#e6f2ff;">
+        <img src="fridge.png" alt="Fridge Inventory: Grocery Cost icon" />
+      </div>
 
-  <div class="app-info">
-    <div class="app-badge">iOS • Free</div>
-    <h2>Fridge Inventory: Grocery Cost</h2>
-    <p>Log groceries and visualize what’s in your fridge — anytime, anywhere.</p>
-    <p>Automatic inventory updates and ingredient cost tracking for each meal.</p>
+      <div class="app-info">
+        <div class="app-badge">iOS • Free</div>
+        <h2>Fridge Inventory: Grocery Cost</h2>
+        <p>Log groceries and visualize what’s in your fridge — anytime, anywhere.</p>
+        <p>Automatic inventory updates and ingredient cost tracking for each meal.</p>
 
-    <div class="app-links">
-      <a href="https://apps.apple.com/app/fridge-inventory-grocery-cost/id6757185053" target="_blank" rel="noopener noreferrer">
-        View on the App Store
-      </a>
-      <a href="https://omochisoft.github.io/fridge.html" target="_blank" rel="noopener noreferrer">
-        Contact / Support &amp; Privacy Policy
-      </a>
-      <a href="https://omochisoft.github.io/fridge/terms.html" target="_blank" rel="noopener noreferrer">
-        Terms of Use
-      </a>
-    </div>
-  </div>
-</article>
+        <div class="app-links">
+          <a href="https://apps.apple.com/app/fridge-inventory-grocery-cost/id6757185053" target="_blank" rel="noopener noreferrer">
+            View on the App Store
+          </a>
+          <a href="https://omochisoft.github.io/fridge.html" target="_blank" rel="noopener noreferrer">
+            Contact / Support &amp; Privacy Policy
+          </a>
+          <a href="https://omochisoft.github.io/fridge/terms.html" target="_blank" rel="noopener noreferrer">
+            Terms of Use
+          </a>
+        </div>
+      </div>
+    </article>
 
-<!-- BreezeChat Air - Free -->
-<article class="app-card">
-  <div class="app-icon-wrapper" style="background:#e6f4ff;">
-    <img src="breezefree-icon2.png" alt="BreezeChat Air icon" />
-  </div>
+    <!-- BreezeChat Air - Free -->
+    <article class="app-card">
+      <div class="app-icon-wrapper" style="background:#e6f4ff;">
+        <img src="breezefree-icon2.png" alt="BreezeChat Air icon" />
+      </div>
 
-  <div class="app-info">
-    <div class="app-badge">iOS • Free</div>
-    <h2>BreezeChat Air - calm</h2>
-    <p>A private, chat-style space for releasing emotions.</p>
-    <p>Messages are never saved — close the app and everything disappears.</p>
+      <div class="app-info">
+        <div class="app-badge">iOS • Free</div>
+        <h2>BreezeChat Air - calm</h2>
+        <p>A private, chat-style space for releasing emotions.</p>
+        <p>Messages are never saved — close the app and everything disappears.</p>
 
-    <div class="app-links">
-      <a href="" target="_blank" rel="noopener noreferrer">
-        View on the App Store
-      </a>
-      <a href="https://omochisoft.github.io/breeze.html" target="_blank" rel="noopener noreferrer">
-        Contact / Support &amp; Privacy Policy
-      </a>
-    </div>
-  </div>
-</article>
+        <div class="app-links">
+          <a href="" target="_blank" rel="noopener noreferrer">
+            View on the App Store
+          </a>
+          <a href="https://omochisoft.github.io/breeze.html" target="_blank" rel="noopener noreferrer">
+            Contact / Support &amp; Privacy Policy
+          </a>
+        </div>
+      </div>
+    </article>
+
+    <!-- Slide Puzzle Galaxy -->
+    <article class="app-card">
+      <div class="app-icon-wrapper" style="background:#e9e6ff;">
+        <!-- ここは実ファイル名に合わせて差し替えてOK -->
+        <img src="galaxy_icon.png" alt="Slide Puzzle Galaxy icon" />
+      </div>
+
+      <div class="app-info">
+        <div class="app-badge">iOS • Free</div>
+        <h2>Slide Puzzle Galaxy</h2>
+        <p>A fast, satisfying number slide puzzle with two blanks.</p>
+        <p>Quick brain training with 150 stages + EXTRA mode.</p>
+
+        <div class="app-links">
+          <a href="" target="_blank" rel="noopener noreferrer">
+            View on the App Store
+          </a>
+          <a href="https://omochisoft.github.io/galaxy.html" target="_blank" rel="noopener noreferrer">
+            Contact / Support &amp; Privacy Policy
+          </a>
+        </div>
+      </div>
+    </article>
 
   </section>
 </main>
@@ -281,4 +305,3 @@
 
 </body>
 </html>
-
