--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <p>Quick brain training with 150 stages + EXTRA mode.</p>
 
         <div class="app-links">
-          <a href="" target="_blank" rel="noopener noreferrer">
+          <a href="https://apps.apple.com/app/slide-puzzle-galaxy/id6757672652" target="_blank" rel="noopener noreferrer">
             View on the App Store
           </a>
           <a href="https://omochisoft.github.io/galaxy.html" target="_blank" rel="noopener noreferrer">
