--- a/homu_privacy.html
+++ b/homu_privacy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">https://github.com/omochisoft/omochisoft.github.io/tree/main
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>HOMU+ | Support & Privacy Policy</title>
@@ -29,6 +29,7 @@
 
     body {
       margin: 0;
+      padding: 0;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       background: var(--bg-gradient);
       color: var(--text-main);
@@ -52,18 +53,30 @@
     }
 
     /* Icon Placeholder */
-    .app-icon {
+    .app-icon-container {
       width: 80px;
       height: 80px;
       margin: 0 auto 16px;
-      background: linear-gradient(135deg, #5E5CE6, #FF2D55);
       border-radius: 20px;
-      box-shadow: 0 10px 20px rgba(94, 92, 230, 0.3);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+      overflow: hidden; /* 画像がはみ出ないように */
       display: flex;
       align-items: center;
       justify-content: center;
+      background: linear-gradient(135deg, #5E5CE6, #FF2D55); /* 画像がない時の背景色 */
       color: white;
-      font-size: 32px;
+    }
+
+    .app-icon-container img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    /* Placeholder SVG style */
+    .app-icon-container svg {
+      width: 40px;
+      height: 40px;
     }
 
     header h1 {
@@ -95,10 +108,10 @@
       margin-bottom: 24px;
       box-shadow: 0 8px 30px rgba(0, 0, 0, 0.04);
       border: 1px solid rgba(255, 255, 255, 0.4);
-      opacity: 0; /* JSで表示するまで隠す */
+      opacity: 0;
       transform: translateY(10px);
       transition: opacity 0.4s ease, transform 0.4s ease;
-      display: none; /* デフォルト非表示 */
+      display: none;
     }
 
     .card.active {
@@ -140,6 +153,7 @@
       color: #5E5CE6;
       text-decoration: none;
       font-weight: 500;
+      word-break: break-all;
     }
 
     .muted {
@@ -177,13 +191,15 @@
   <div class="aurora-bg"></div>
 
   <header>
-    <div class="app-icon">
-        <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
-            <polyline points="9 22 9 12 15 12 15 22"></polyline>
-            <path d="M13 2L13 22" stroke="white" stroke-width="0" fill="white" />
-        </svg>
+    <div class="app-icon-container">
+      
+      <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+          <polyline points="9 22 9 12 15 12 15 22"></polyline>
+          <path d="M13 2L13 22" stroke="white" stroke-width="0" fill="white" />
+      </svg>
     </div>
+
     <h1 id="app-title">HOMU+</h1>
     <p>Support Information & Privacy Policy</p>
   </header>
@@ -227,7 +243,7 @@
 
       <h3>6. Contact</h3>
       <p>If you have any questions or need support, please contact us.</p>
-      <p><strong>Support:</strong> <a href="mailto:support@homia.app">support@homia.app</a></p>
+      <p><strong>Support:</strong> <a href="mailto:omochi_soft-dev@yahoo.co.jp">omochi_soft-dev@yahoo.co.jp</a></p>
     </section>
 
     <section class="card" id="lang-ja">
@@ -267,7 +283,7 @@
 
       <h3>6. お問い合わせ</h3>
       <p>ご質問やサポートが必要な場合は、下記までご連絡ください。</p>
-      <p><strong>サポート窓口:</strong> <a href="mailto:support@homia.app">support@homia.app</a></p>
+      <p><strong>サポート窓口:</strong> <a href="mailto:omochi_soft-dev@yahoo.co.jp">omochi_soft-dev@yahoo.co.jp</a></p>
     </section>
 
     <section class="card" id="lang-de">
@@ -284,7 +300,7 @@
       <a href="#" onclick="showEnglish(); return false;" class="btn-english">Read full Policy (English)</a>
       
       <h3>Kontakt</h3>
-      <p><a href="mailto:support@homia.app">support@homia.app</a></p>
+      <p><a href="mailto:omochi_soft-dev@yahoo.co.jp">omochi_soft-dev@yahoo.co.jp</a></p>
     </section>
 
     <section class="card" id="lang-fr">
@@ -301,7 +317,7 @@
       <a href="#" onclick="showEnglish(); return false;" class="btn-english">Read full Policy (English)</a>
 
       <h3>Contact</h3>
-      <p><a href="mailto:support@homia.app">support@homia.app</a></p>
+      <p><a href="mailto:omochi_soft-dev@yahoo.co.jp">omochi_soft-dev@yahoo.co.jp</a></p>
     </section>
 
     <section class="card" id="lang-es">
@@ -318,7 +334,7 @@
       <a href="#" onclick="showEnglish(); return false;" class="btn-english">Read full Policy (English)</a>
 
       <h3>Contacto</h3>
-      <p><a href="mailto:support@homia.app">support@homia.app</a></p>
+      <p><a href="mailto:omochi_soft-dev@yahoo.co.jp">omochi_soft-dev@yahoo.co.jp</a></p>
     </section>
 
     <section class="card" id="lang-ko">
@@ -335,7 +351,7 @@
       <a href="#" onclick="showEnglish(); return false;" class="btn-english">Read full Policy (English)</a>
 
       <h3>문의</h3>
-      <p><a href="mailto:support@homia.app">support@homia.app</a></p>
+      <p><a href="mailto:omochi_soft-dev@yahoo.co.jp">omochi_soft-dev@yahoo.co.jp</a></p>
     </section>
 
     <section class="card" id="lang-zh-hant">
@@ -352,7 +368,7 @@
       <a href="#" onclick="showEnglish(); return false;" class="btn-english">Read full Policy (English)</a>
 
       <h3>聯絡方式</h3>
-      <p><a href="mailto:support@homia.app">support@homia.app</a></p>
+      <p><a href="mailto:omochi_soft-dev@yahoo.co.jp">omochi_soft-dev@yahoo.co.jp</a></p>
     </section>
 
     <section class="card" id="lang-zh-hans">
@@ -369,18 +385,18 @@
       <a href="#" onclick="showEnglish(); return false;" class="btn-english">Read full Policy (English)</a>
 
       <h3>联系方式</h3>
-      <p><a href="mailto:support@homia.app">support@homia.app</a></p>
+      <p><a href="mailto:omochi_soft-dev@yahoo.co.jp">omochi_soft-dev@yahoo.co.jp</a></p>
     </section>
 
   </main>
 
   <footer>
-    &copy; 2026 HOMU+ Team. All rights reserved.
+    &copy; 2026 KOTARO OMORI. All rights reserved.
   </footer>
 
   <script>
     function detectLanguage() {
-      // ブラウザの言語設定を取得 (例: 'ja', 'ja-JP', 'en-US')
+      // ブラウザの言語設定を取得
       const lang = navigator.language || navigator.userLanguage; 
       const langCode = lang.toLowerCase();
 
@@ -413,7 +429,7 @@
       if (targetEl) {
         targetEl.classList.add('active');
       } else {
-        // フォールバック（万が一IDが見つからない場合）
+        // フォールバック
         document.getElementById('lang-en').classList.add('active');
       }
     }
